fixed overflow in about me

--- a/css/master.css
+++ b/css/master.css
@@ -25,8 +25,8 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-    height: 175vh;
-    width: 100vw;
+    height: auto;
+    width: auto;
     background-image: -webkit-gradient(
       linear, left top, left bottom, from(rgba(50,50,50,0.8)),
       to(rgba(80,80,80,0.2)), color-stop(.5,#333333)
@@ -45,8 +45,8 @@ body{
     -moz-background-size: cover;
     -o-background-size: cover;
     background-size: cover;
-  height: 100vh;
-  width: 100vw;
+  height: auto;
+  width: auto;
     background-image: -webkit-gradient(
       linear, left top, left bottom, from(rgba(50,50,50,0.8)),
       to(rgba(80,80,80,0.2)), color-stop(.5,#333333)
@@ -54,6 +54,7 @@ body{
     background-image: -moz-linear-gradient(
       rgba(255, 255, 255, 0.7) 0%, rgba(255, 255, 255, 0) 95%
     );
+    
 }
 
 #resume_page{
@@ -244,4 +245,13 @@ body{
 .proj_row{
     height: 90%;
     text-align: center;
+    margin-bottom: 35px;
+}
+
+.class_row{
+    
+}
+
+.exp_row{
+    margin-bottom: 50px;
 }
